# ai-101

./: .gitignore  PyTerminus_PackageMage_Adventure.md  README.md  RUN_ME_FIRST.py  adventure.py  pyproject.toml  saying.py  scroll.py  simple_scroll.py
pyterminus_package_mage/: __init__.py
