[project]
name = "pyterminus-package-mage"
version = "0.1.0"
description = "Learning Python magic"
authors = [
    {name = "catwhisperingninja"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
